--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/server.js",
-    "dev": "nodemon src/server.js -e ejs,js"
+    "dev": "nodemon src/server.js -e ejs,js,json"
   },
   "type": "module",
   "author": "",
